Fix white space on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ section {
 .section-image {
   width: auto;
   height: auto;
-  max-width: 400px;
+  max-width: 300px;
 }
 
 @media screen and (min-width: 900px){
